--- a/progettotesi/package.json
+++ b/progettotesi/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "redux-thunk": "^2.4.1"
   }
 }
